--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,9 +25,51 @@
             },
         },
         {
+            "label": "odin: Test This",
+            "type": "shell",
+            "command": "odin test ${fileDirname} -debug",
+            "problemMatcher": {
+                "owner": "odin",
+                "fileLocation": "absolute",
+                "source": "odin",
+                "severity": "error",
+                "pattern": {
+                    "regexp": "^(.+\\.odin)\\((\\d+)\\:(\\d+)\\) (.+?:)? (.+)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "message": 5,
+                }
+            },
+            "presentation": {
+                "clear": true,
+            },
+        },
+        {
             "label": "odin: Run Homework1",
             "type": "shell",
             "command": "odin run homework1 -debug",
+            "problemMatcher": {
+                "owner": "odin",
+                "fileLocation": "absolute",
+                "source": "odin",
+                "severity": "error",
+                "pattern": {
+                    "regexp": "^(.+\\.odin)\\((\\d+)\\:(\\d+)\\) (.+?:)? (.+)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "message": 5,
+                }
+            },
+            "presentation": {
+                "clear": true,
+            },
+        },
+        {
+            "label": "odin: Build Homework1",
+            "type": "shell",
+            "command": "odin build homework1 -debug",
             "problemMatcher": {
                 "owner": "odin",
                 "fileLocation": "absolute",
